--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
+    "@ionic-native/http": "^4.20.0",
     "@ionic-native/native-page-transitions": "^5.0.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "^4.18.0",
@@ -28,8 +29,10 @@
     "angularfire2": "^5.1.1",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "6.4.0",
+    "cordova-plugin-advanced-http": "2.0.5",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -61,7 +64,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-app-version": {},
-      "com.telerik.plugins.nativepagetransitions": {}
+      "com.telerik.plugins.nativepagetransitions": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
