--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "angularfire2": "^5.1.1",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "6.4.0",
-    "cordova-plugin-advanced-http": "2.0.5",
+    "cordova-plugin-advanced-http": "^2.0.5",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.4.0",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -59,13 +59,11 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-app-version": {},
       "com.telerik.plugins.nativepagetransitions": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "android"
