Creación de carrito de compras y modificaciones en pantalla de productos

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,7 @@
 {
   "name": "Alquio",
-  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
   },
-  "app_id": ""
+  "type": "ionic-angular"
 }
