--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
-    "@angular/common": "^7.2.8",
-    "@angular/compiler": "^7.2.8",
-    "@angular/compiler-cli": "^7.2.8",
-    "@angular/core": "^7.2.8",
-    "@angular/forms": "^7.2.8",
-    "@angular/http": "^7.2.8",
-    "@angular/platform-browser": "^7.2.8",
-    "@angular/platform-browser-dynamic": "^7.2.8",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
-    "@ionic-native/http": "^4.20.0",
     "@ionic-native/native-page-transitions": "^5.0.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "^4.18.0",
@@ -29,12 +28,10 @@
     "angularfire2": "^5.1.1",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "6.4.0",
-    "cordova-plugin-advanced-http": "^2.0.6",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-ionic-webview": "1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -62,7 +59,6 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-app-version": {},
       "com.telerik.plugins.nativepagetransitions": {},
-      "cordova-plugin-advanced-http": {},
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
