--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ion-bottom-drawer": "^1.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "jquery": "^3.4.1",
     "promise-polyfill": "^8.1.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
