--- a/package.json
+++ b/package.json
@@ -20,24 +20,35 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@cometchat-pro/chat": "^1.3.0",
+    "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "~4.18.0",
+    "@ionic-native/file": "^5.9.0",
+    "@ionic-native/file-path": "^5.9.0",
+    "@ionic-native/file-transfer": "^5.9.0",
     "@ionic-native/native-page-transitions": "^5.0.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "^4.18.0",
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.1",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
-    "cordova-android": "6.4.0",
+    "cordova-android": "^8.0.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filepath": "^1.5.5",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "^2.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.8.2",
+    "guid-typescript": "^1.0.9",
     "ion-bottom-drawer": "^1.0.3",
     "ionic-angular": "3.9.2",
+    "ionic3-star-rating": "^2.0.1",
     "ionicons": "3.0.0",
     "jquery": "^3.4.1",
     "promise-polyfill": "^8.1.0",
@@ -60,7 +71,10 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-app-version": {},
       "com.telerik.plugins.nativepagetransitions": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-telerik-imagepicker": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
       "android"
