--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@ionic-native/file": "^5.9.0",
     "@ionic-native/file-path": "^5.9.0",
     "@ionic-native/file-transfer": "^5.9.0",
+    "@ionic-native/in-app-browser": "^4.20.0",
     "@ionic-native/native-page-transitions": "^5.0.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "^4.18.0",
     "@ionic/storage": "2.2.0",
+    "angular-credit-cards": "^3.1.8",
     "angularfire2": "^5.1.1",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "^8.0.0",
@@ -38,6 +40,7 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.5.5",
+    "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -54,6 +57,7 @@
     "promise-polyfill": "^8.1.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "ts-md5": "^1.2.4",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -74,7 +78,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-telerik-imagepicker": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
